Fixed scrollbar adaptation

--- a/src/components/Pages/ Question/Question.module.scss
+++ b/src/components/Pages/ Question/Question.module.scss
@@ -83,13 +83,13 @@
 
 @media screen and (min-width: 700px) {
   .QuestionWrap{
-    width: 50vw;
+    width: 50%;
   }
 }
 
 @media screen and (min-width: 1100px) {
   .QuestionWrap{
-    width: 33.3vw;
+    width: 33.3%;
   }
 }
 
