--- a/src/components/Pages/Main/Main.module.scss
+++ b/src/components/Pages/Main/Main.module.scss
@@ -1,7 +1,11 @@
 .PageWrap{
-  width: 100vw;
+  width: 100%;
   max-width: 1920px;
   overflow: visible;
+
+  >div{
+    overflow: visible;
+  }
 }
 
 @media screen and (min-width: 1920px){
