--- a/src/components/Pages/Main/PostsSlider/PostsSlider.module.scss
+++ b/src/components/Pages/Main/PostsSlider/PostsSlider.module.scss
@@ -1,7 +1,7 @@
 @import "../../../../strings/colors";
 .PostsSlider{
   width: 100%;
-  height: 310px;
+  height: auto;
   overflow: visible;
   margin-bottom: 50px;
 
@@ -13,7 +13,7 @@
     overflow: visible;
   }
   .PostWrapBig{
-    width: 200vw;
+    width: 200%;
     height: 310px;
     margin-left: 0vw;
     transition: margin-left .5s ease-in-out;
