--- a/src/components/Pages/Posts/posts.module.scss
+++ b/src/components/Pages/Posts/posts.module.scss
@@ -5,7 +5,6 @@
   padding-bottom: 20px;
   display: flex;
   max-width: 1920px;
-  width: 100vw;
   flex-wrap: wrap;
   overflow: visible;
 
@@ -30,7 +29,7 @@
         box-sizing: border-box;
         border: none;
         outline: none;
-        width: calc(100vw - 100px);
+        width: calc(100vw - 120px);
         max-width: 1810px;
         height: 70px;
         color: $accent2light;
