--- a/src/components/Pages/Questions/Questions.module.scss
+++ b/src/components/Pages/Questions/Questions.module.scss
@@ -6,7 +6,6 @@
   padding-bottom: 20px;
   display: flex;
   flex-wrap: wrap;
-  width: 100vw;
   overflow: visible;
   max-width: 1920px;
 
@@ -32,7 +31,7 @@
         box-sizing: border-box;
         border: none;
         outline: none;
-        width: calc(100vw - 100px);
+        width: calc(100vw - 120px);
         max-width: 1810px;
         height: 70px;
         color: #D183C9;
